package org.demis27.cbc.api.entity;

public enum Role {

    WRITER, PENCILLER, INKER, LETTERER, COLORIST;

}
